--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,11 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created by Isaac Frank::: youtube.com/IsaacFrank" />
-
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200&display=swap" rel="stylesheet">
   <title>Elon Coin</title>
 </head>
 
-<body>
+<body style="font-family: 'Titillium Web', sans-serif;">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 </body>
