--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,10 +6,11 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
+  <meta name="description" content="ELONCOIN WEBPAGE" />
   <meta name="description" content="Web site created by Isaac Frank::: youtube.com/IsaacFrank" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;1,100;1,400&display=swap"
+    rel="stylesheet">
   <title>Elon Coin</title>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-M4B4M24KZ0"></script>
@@ -25,7 +26,7 @@
   </script>
 </head>
 
-<body style="font-family: 'Font Awesome 5 Regular'">
+<body style="font-family: 'Poppins', sans-serif">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 </body>
